--- a/index.css
+++ b/index.css
@@ -34,3 +34,10 @@
 .hide {
   display: none;
 }
+
+.bordertje {
+  margin-top: 10px;
+  border: 1px solid rgba(4, 56, 99, 0.424);
+  box-shadow: 2px 2px 5px 1px;
+  border-radius: 3px;
+}
